# gadget-workspace

./: Cargo.toml
.github/workflows/: ci.yml
blueprints/incredible-squaring/: Cargo.toml
blueprints/incredible-squaring-eigenlayer/: Cargo.toml  build.rs  foundry.toml  remappings.txt
blueprints/incredible-squaring-eigenlayer/src/: lib.rs  main.rs  tests.rs
blueprints/incredible-squaring-eigenlayer/src/contexts/: aggregator.rs  x_square.rs
blueprints/incredible-squaring-eigenlayer/src/jobs/: compute_x_square.rs  initialize_task.rs
blueprints/incredible-squaring/src/: tests.rs
cli/: Cargo.toml
cli/src/: keys.rs
cli/src/deploy/: tangle.rs
crates/clients/: Cargo.toml
crates/clients/eigenlayer/: Cargo.toml
crates/clients/eigenlayer/src/: client.rs  eigenlayer.rs  lib.rs
crates/clients/networking/: Cargo.toml
crates/clients/tangle/: Cargo.toml
crates/clients/tangle/src/: client.rs  lib.rs  services.rs  tangle.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  protocol.rs
crates/contexts/: Cargo.toml
crates/contexts/src/: eigenlayer.rs  lib.rs  services.rs
crates/crypto/: Cargo.toml
crates/crypto/bls/src/: w3f_bls.rs
crates/crypto/bn254/src/: arkworks_bn254.rs
crates/crypto/core/src/: lib.rs
crates/crypto/ed25519/src/: zebra_ed25519.rs
crates/crypto/k256/src/: k256_ecdsa.rs
crates/crypto/sp-core/src/: sp_core_bls_util.rs  sp_core_util.rs
crates/crypto/sr25519/src/: schnorrkel_sr25519.rs
crates/crypto/tangle-pair-signer/src/: tangle_pair_signer.rs
crates/event-listeners/tangle/: Cargo.toml
crates/keystore/src/: error.rs
crates/keystore/src/keystore/backends/: k256.rs  mod.rs
crates/macros/blueprint-proc-macro/src/job/: evm.rs  mod.rs
crates/macros/context-derive/src/: eigenlayer.rs  keystore.rs  lib.rs
crates/macros/core/src/: lib.rs
crates/networking/: Cargo.toml
crates/networking/src/: gossip.rs  lib.rs  networking.rs  round_based_compat.rs  setup.rs
crates/networking/src/handlers/: connections.rs  gossip.rs  p2p.rs
crates/runners/: Cargo.toml
crates/runners/core/: Cargo.toml
crates/runners/core/src/: config.rs  error.rs  jobs.rs  lib.rs  runner.rs
crates/runners/eigenlayer/: Cargo.toml
crates/runners/eigenlayer/src/: bls.rs  ecdsa.rs  error.rs  lib.rs
crates/runners/src/: lib.rs
crates/runners/symbiotic/: Cargo.toml
crates/runners/symbiotic/src/: config.rs  error.rs  lib.rs
crates/runners/tangle/: Cargo.toml
crates/runners/tangle/src/: error.rs  lib.rs  tangle.rs
crates/sdk/src/: lib.rs
crates/std/src/: lib.rs
crates/std/src/io/: error.rs
crates/testing-utils/: Cargo.toml
crates/testing-utils/anvil/: Cargo.toml
crates/testing-utils/anvil/src/: anvil.rs
crates/testing-utils/core/src/: harness.rs  runner.rs
crates/testing-utils/eigenlayer/: Cargo.toml
crates/testing-utils/eigenlayer/src/: harness.rs  helpers.rs  lib.rs  runner.rs  utils.rs
crates/testing-utils/tangle/: Cargo.toml
crates/testing-utils/tangle/src/: harness.rs  lib.rs  tests.rs
crates/utils/: Cargo.toml
crates/utils/core/: Cargo.toml
crates/utils/core/src/: handler.rs
crates/utils/src/: lib.rs
crates/utils/tangle/src/: lib.rs
