[package]
name = "gadget-runners"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gadget-runner-core = { workspace = true }
gadget-runner-eigenlayer = { workspace = true, optional = true }
gadget-runner-symbiotic = { workspace = true, optional = true }
gadget-runner-tangle = { workspace = true, optional = true }


[features]
default = ["eigenlayer", "symbiotic", "tangle"]
eigenlayer = ["gadget-runner-eigenlayer"]
symbiotic = ["gadget-runner-symbiotic"]
tangle = ["gadget-runner-tangle"]

[lints]
workspace = true
