[package]
name = "gadget-runner-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
gadget-config = { workspace = true }
gadget-utils = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Error
thiserror = { workspace = true }

# Logging
gadget-logging = { workspace = true }

[features]
default = ["std"]

std = ["gadget-config/std", "gadget-utils/std", "gadget-logging/std"]
no-std = ["futures/alloc"]

eigenlayer = []
symbiotic = []
tangle = []
