[package]
name = "gadget-runner-tangle"
version = "0.1.0"
edition = "2021"

[dependencies]
gadget-runner-core = { workspace = true, features = ["tangle"] }
async-trait = { workspace = true }
gadget-config = { workspace = true, features = ["std", "tangle", "keystore"] }
gadget-logging = { workspace = true }
gadget-utils = { workspace = true, features = ["tangle"] }
thiserror = { workspace = true }
gadget-keystore = { workspace = true, optional = true, features = ["ecdsa", "bls"] }
sp-core = { workspace = true, default-features = false, features = ["full_crypto"] }
gadget-clients = { workspace = true, features = ["tangle"] }
gadget-std = { workspace = true, default-features = false }
tangle-subxt = { workspace = true }
subxt = { workspace = true, features = ["native"] }

[features]
default = ["std"]

std = [
    "gadget-runner-core/std",
    "gadget-config/std",
    "gadget-logging/std",
    "gadget-utils/std",
    "gadget-clients/std",
    "gadget-keystore?/std",
    "sp-core/std",
]

bls = ["keystore", "gadget-keystore/bn254"]
ecdsa = ["keystore", "gadget-keystore/bn254", "gadget-keystore/ecdsa"]
keystore = ["gadget-keystore", "gadget-config/keystore"]