[package]
name = "gadget-anvil-testing-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gadget-std = { workspace = true, features = ["std"] }
gadget-logging = { workspace = true }
gadget-keystore = { workspace = true, features = ["std", "eigenlayer", "evm"] }
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
testcontainers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }